Blog pagination overlap footer fix

--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -275,7 +275,7 @@ footer {
 
 
 .pagination {
-  margin: 1em auto;
+  margin: 1em auto 4em auto;
   overflow: hidden;
   width: 70%;
 }
@@ -517,7 +517,6 @@ footer {
   }
 
   .pagination {
-    margin: 0 !important;
     width: 100%;
   }
   #instafeed a {
